<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_game_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/game_end"
        android:gravity="center"
        android:elevation="2dp"
        android:background="#B8A17E"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/game_over_text"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_display"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#D6E6F6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHeight_percent="0.7">

        <FrameLayout
            android:id="@+id/game_stage"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/enemy_ufo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/enemy_ufo"
                android:src="@drawable/enemy_ufo" />
        </FrameLayout>

        <TextView
            android:id="@+id/lifeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_life"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/game_control_text"/>

        <ImageView
            android:id="@+id/cannon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/normal_cannon"
            android:contentDescription="@string/cannon_drawing"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.15" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <SeekBar
        android:id="@+id/rotate_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progress="50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineHorizontalCenter"
        app:layout_constraintBottom_toTopOf="@+id/guidelineVerticalNinety"
        app:layout_constraintTop_toBottomOf="@+id/game_display"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"/>

    <TextView
        android:id="@+id/tv_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_rotate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineHorizontalCenter"
        app:layout_constraintTop_toTopOf="@+id/guidelineVerticalNinety"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.0"
        style="@style/game_control_text"/>


    <ImageButton
        android:id="@+id/light_bullet_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/light_bullet"
        android:scaleType="fitCenter"
        android:src="@drawable/light_bullet"
        app:layout_constraintStart_toStartOf="@+id/guidelineHorizontalCenter"
        app:layout_constraintEnd_toStartOf="@+id/normal_bullet_button"
        app:layout_constraintTop_toBottomOf="@+id/game_display"
        app:layout_constraintBottom_toTopOf="@+id/fire_button"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintWidth_percent="0.12"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <ImageButton
        android:id="@+id/normal_bullet_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/normal_bullet"
        android:scaleType="fitCenter"
        android:src="@drawable/normal_bullet"
        app:layout_constraintStart_toEndOf="@+id/light_bullet_button"
        app:layout_constraintEnd_toStartOf="@+id/heavy_bullet_button"
        app:layout_constraintTop_toBottomOf="@+id/game_display"
        app:layout_constraintBottom_toTopOf="@+id/fire_button"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.12"
        app:layout_constraintDimensionRatio="1"/>

    <ImageButton
        android:id="@+id/heavy_bullet_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/heavy_bullet"
        android:scaleType="fitCenter"
        android:src="@drawable/heavy_bullet"
        app:layout_constraintStart_toEndOf="@+id/normal_bullet_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_display"
        app:layout_constraintBottom_toTopOf="@+id/fire_button"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.12"
        app:layout_constraintDimensionRatio="1"/>

    <ImageButton
        android:id="@+id/fire_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/fire_icon"
        android:contentDescription="@string/str_fire"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/guidelineHorizontalCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_display"
        app:layout_constraintBottom_toTopOf="@+id/guidelineVerticalNinety"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/tv_fire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_fire"
        app:layout_constraintStart_toStartOf="@+id/guidelineHorizontalCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineVerticalNinety"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        style="@style/game_control_text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalNinety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>